--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,8 +12,6 @@
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:id="@+id/questionEditText"
-        android:layout_below="@+id/textView"
-        android:layout_toEndOf="@+id/textView"
         android:hint="Ask a question..."
         android:singleLine="true"/>
 
@@ -37,7 +35,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="55dp"
-        android:text="shake"
+        android:text="History"
         android:id="@+id/shakeButton"
         android:layout_gravity="center_horizontal"
         android:background="@drawable/shakebutton"
